# endgame

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: coverage.yml  pages.yml  tests.yml
crates/endgame_direction/: Cargo.toml  LICENSE  README.md
crates/endgame_direction/src/: lib.rs
crates/endgame_direction/tests/: direction_tests.rs
crates/endgame_egui/: Cargo.toml  README.md
crates/endgame_egui/src/: lib.rs
crates/endgame_egui/tests/: test_egui.rs
crates/endgame_grid/: Cargo.toml  README.md
crates/endgame_grid/src/: dynamic.rs  hex.rs  lib.rs  shape.rs  square.rs  triangle.rs  utils.rs
crates/endgame_grid/tests/: grid_tests.rs
crates/endgame_ludic/: Cargo.toml  README.md
crates/endgame_ludic/src/: game.rs  lib.rs  payoffs.rs  strategy.rs  utils.rs
examples/games/rps/: Cargo.toml  README.md
examples/games/rps/src/: lib.rs
examples/games/rps/tests/: rps_tests.rs
examples/games/tictactoe/: Cargo.toml  README.md
examples/games/tictactoe/src/: lib.rs
examples/games/tictactoe/tests/: tictactoe_tests.rs
examples/grid_demo/: Cargo.toml  README.md  index.html
examples/grid_demo/src/: allowed_directions.rs  angle_to_direction.rs  app.rs  axis_iterator.rs  cell_measurements.rs  common.rs  coordinates.rs  direction_iterator.rs  grid_demo.rs  grid_rectangle.rs  lib.rs  main.rs  module_addition.rs  module_multiplication.rs  path_iterator.rs  reflection.rs  rotation.rs  shapes.rs
examples/grid_demo/tests/: test_demo.rs
src/: lib.rs
