[package]
name = "endgame"
description = "A turn-based game engine."
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.2.0"
keywords = ["game", "engine", "gamedev"]
license = "MIT"
repository = "https://github.com/gawashburn/endgame"
exclude = ["crates/"]
edition = "2024"


[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/grid_demo",
    "examples/games/*",
]

[dependencies]
endgame_direction = { path = "crates/endgame_direction", version = "0.4" }
endgame_grid = { path = "crates/endgame_grid", version = "0.3" }
endgame_egui = { path = "crates/endgame_egui", version = "0.2" }
endgame_ludic = { path = "crates/endgame_ludic", version = "0.1" }
grid_demo = { path = "examples/grid_demo" }
