[package]
name = "endgame_direction"
description = "A library for representing cardinal and ordinal directions."
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.1.0"
repository = "https://github.com/gawashburn/endgame"
license = "MIT"
edition = "2024"

[dev-dependencies]
itertools = "0.14"

[dependencies]
bitset-core = "0.1"
serde = { version = "1.0", features = ["derive"] }
