[package]
name = "endgame_direction"
description = "A library for representing cardinal and ordinal directions."
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.2.0"
repository = "https://github.com/gawashburn/endgame"
license = "MIT"
edition = "2024"

[dev-dependencies]
itertools = "0.14"

[dependencies]
bitset-core = "0.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = "1.5.0"

[features]
default = ["serde"]
serde = ["dep:serde"]