[package]
name = "endgame_egui"
description = "A library for integrating endgame with the egui GUI library."
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.2.0"
repository = "https://github.com/gawashburn/endgame"
edition = "2024"
license = "MIT"

[dev-dependencies]
egui_kittest = "0.32"

[dependencies]
itertools = "0.14"
endgame_direction = { path = "../endgame_direction", version = "0.4" }
endgame_grid = { path = "../endgame_grid", version = "0.3" }
mint = "0.5"
glam = { version = "0.30", features = ["serde", "mint"] }
egui = { version = "0.32", features = ["serde", "mint"] }
