[package]
name = "endgame_grid"
description = "A library for representing regular grids."
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
repository = "https://github.com/gawashburn/endgame"
license = "MIT"
version = "0.2.0"
edition = "2024"

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
endgame_direction = { path = "../endgame_direction", version = "0.3" }
glam = { version = "0.30", features = ["mint"] }
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = "1.5.0"
ordered-float = "5.0"
itertools = "0.14"

[features]
default = ["serde"]
serde = ["dep:serde", "glam/serde"]
