[package]
name = "endgame_ludic"
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.1.0"
repository = "https://github.com/gawashburn/endgame"
license = "MIT"
edition = "2024"

[dependencies]
ordered-float = "5.0"
itertools = "0.14"
rand = "0.9.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
