[package]
name = "tictactoe"
authors = ["Geoffrey Washburn <geoff@washburght.org>"]
version = "0.1.0"
repository = "https://github.com/gawashburn/endgame"
license = "MIT"
edition = "2024"

[dependencies]
ordered-float = "5.0"
serde = { version = "1.0", features = ["derive"] }
endgame_direction = { path = "../../../crates/endgame_direction", version = "0.3" }
endgame_ludic = { path = "../../../crates/endgame_ludic", version = "0.1" }
endgame_grid = { path = "../../../crates/endgame_grid", version = "0.2" }

